--- a/pages/filters.module.scss
+++ b/pages/filters.module.scss
@@ -279,7 +279,9 @@
 
     & > * {
       margin-right: 5rem;
-
+      @media (max-width: 768px) {
+        margin-right: 2rem;
+      }
       &:last-child {
         margin-right: 0;
       }
