--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -1,11 +1,25 @@
 .hero-bg {
   background-image: url("/images/landing-bg.png");
-  @media (max-width: 600px) {
-    background-size: 100vw 21rem;
+  @media (max-width: 768px) {
+    background-image: url("/images/landing-bg-mobile.png");
+    height: 24rem;
+    background-position: 0 1rem;
+    background-size: 100vw auto;
+    color: white;
   }
 }
 .hero-content {
   padding: 2rem 4rem;
+  @media (max-width: 768px) {
+    background-color: rgba(0, 0, 0, 0.3);
+    text-align: center;
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    margin-top: -2rem;
+  }
   .title {
     font-size: 4.5rem;
     font-weight: 300;
@@ -14,13 +28,17 @@
       font-size: 4rem;
     }
     @media (max-width: 768px) {
-      font-size: 1.5rem;
-      width: 80%;
+      font-size: 2rem;
+      font-stretch: extra-expanded;
+      width: 100%;
     }
   }
   .subtitle {
     font-size: 1.3rem;
     margin: 1rem 0;
+    @media (max-width: 768px) {
+      width: 80%;
+    }
   }
 }
 
@@ -84,6 +102,13 @@
   font-weight: 300;
   font-size: 1.1rem;
   color: #7c7d7c;
+  @media (max-width: 768px) {
+    font-weight: 400;
+    color: #151414;
+    & > *:nth-child(2) {
+      font-weight: 700;
+    }
+  }
 }
 .hero-input {
   position: absolute;
@@ -95,6 +120,10 @@
 .featured-occasion-image {
   width: 65vw;
   margin-bottom: 2rem;
+  @media (max-width: 768px) {
+    width: 100%;
+    border-radius: 0.5rem;
+  }
 }
 .featured-occasion-details {
   position: absolute;
@@ -108,6 +137,14 @@
   align-items: center;
   width: 25rem;
   text-align: center;
+  @media (max-width: 768px) {
+    position: relative;
+    right: unset;
+    top: unset;
+    width: 90%;
+    margin: -5rem auto 0;
+    border-radius: 0.5rem;
+  }
   .title {
     font-weight: 400;
     font-size: 1.5rem;
@@ -115,6 +152,10 @@
   .subtitle {
     margin: 2rem 0;
     font-size: 1rem;
+    @media (max-width: 768px) {
+      font-size: 1.1rem;
+      margin: 1rem 0;
+    }
   }
   .button {
     width: 100%;
@@ -435,18 +476,19 @@
   margin-top: 1rem;
   box-shadow: 0 0 1rem rgba(0, 0, 0, 0.2);
   font-size: 1rem;
+  z-index: 2;
 
   @media (max-width: 768px) {
     flex-direction: column;
     padding: 1rem;
     height: auto;
-    width: 80%;
-    box-shadow: 3px 10px 13px 0px rgb(0 0 0 / 16%);
+    margin-top: 0;
+    width: 90%;
+    font-size: 1.1rem;
+    box-shadow: 0.3rem 1rem 1rem 0 rgb(0 0 0 / 16%);
+    border-radius: 0.3rem;
   }
 
-  @media (max-width: 500px) {
-    width: 90%;
-  }
   .occasion-select {
     border: none;
     padding: 0 0.4rem;
@@ -454,8 +496,8 @@
     @media (max-width: 1300px) {
       width: 16rem;
     }
-    @media (max-width: 500px) {
-      width: 49%;
+    @media (max-width: 768px) {
+      width: 59%;
     }
   }
   .delivery-date {
@@ -464,8 +506,8 @@
     @media (max-width: 1300px) {
       width: 12rem;
     }
-    @media (max-width: 500px) {
-      width: 49%;
+    @media (max-width: 768px) {
+      width: 39%;
     }
   }
   .input-submit {
@@ -480,6 +522,7 @@
     }
     @media (max-width: 768px) {
       margin-top: 0.5rem;
+      width: 100%;
     }
   }
 }
