--- a/components/occasion-card/OccasionCard.module.scss
+++ b/components/occasion-card/OccasionCard.module.scss
@@ -28,11 +28,14 @@
   }
 
   @media (max-width: 768px) {
-    width: 40%;
+    width: 48%;
   }
 
   .detail {
     padding: 1.5rem;
+    @media (max-width: 768px) {
+      padding: 1rem 0.5rem;
+    }
   }
   .name {
     display: -webkit-box;
@@ -46,6 +49,9 @@
     font-size: 1.4rem;
     text-align: center;
     font-weight: 400;
+    @media (max-width: 768px) {
+      font-size: 1.2rem;
+    }
   }
   .subtitle {
     font-size: 1rem;
@@ -62,7 +68,7 @@
     @media (max-width: 1300px) {
       height: 2.6rem;
     }
-    @media (max-width: 400px) {
+    @media (max-width: 768px) {
       border-bottom: 1px solid #eff0f6;
     }
   }
@@ -72,27 +78,9 @@
     font-size: 0.8rem;
     overflow: hidden;
     white-space: nowrap;
-
-    @media (min-width: 420px) {
-      width: 21%;
-      text-align: end;
-    }
-
-    @media (max-width: 420px) {
-      background-image: none;
-      color: white;
-      background-color: #b240da;
-      width: 100%;
-      margin-top: 0.5rem;
-    }
-  }
-  .buy-btn:hover {
-    @media (min-width: 420px) {
-      background-image: none;
-      background-color: #b240da;
-      color: white;
-      width: 35%;
-      text-align: center;
+    @media (max-width: 768px) {
+      height: 2rem;
+      font-weight: 400 !important;
     }
   }
   .buy-btn:hover > img {
@@ -128,19 +116,11 @@
       justify-content: space-between;
       font-size: 1.1rem;
     }
-
-    @media (max-width: 420px) {
-      .price-text {
-        margin-right: 3.5rem;
-      }
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-    }
   }
   .img-wrapper {
     overflow: hidden;
     height: fit-content;
+
     .flower-image {
       height: 17rem;
       width: 100%;
@@ -152,6 +132,9 @@
       }
       @media (max-width: 1050px) {
         height: 14rem;
+      }
+      @media (max-width: 768px) {
+        border-radius: 0.5rem 0.5rem 0 0;
       }
       object-fit: cover;
       transition: 0.3s ease-out;
